--- a/index.html
+++ b/index.html
@@ -1,17 +1,55 @@
-<!DOCTYPE HTML>
-<html lang="pl">
+<!DOCTYPE html>
+</style>
+</head>
+<body>
+  <nav class="site-nav">
+    <button class="side-menu-trigger">Menu</button>
+    <aside class="side-menu">
+      <ul>
+        <li>
+          <a href="IWPB.html">
+            Czym jest IWPB
+          </a>
+        </li>
+        <li>
+          <a href="">
+            Informatyka
+          </a>
+        </li>
+        <li>
+          <a href="">
+            Biznes
+          </a>
+        </li>
+        <li>
+          <a href="">
+            Inwestycje
+          </a>
+        </li>
+        <li>
+          <a href="Kontakt.html">
+            Kontakt
+          </a>
+        </li>
+      </ul>
+  </aside>
+  </nav>
+</body>
+<meta name="robots" content="noindex">
+<html>
 <head>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
+  	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-189391002-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-189391002-2');
 </script>
-	<meta charser="utf-8"/>
-	<title>IWPB</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="styles.css">
+  <title>IWPB</title>
 	<h1>IWPB Witam na stronie</h1>
 	<body>Czesc
 			Bardzo się ciesze, ze połaczyłes się z moją strona. pokaze Ci w jaki sposob mozesz zarobic spore pieniadze
@@ -19,5 +57,83 @@
 	<h2>informatyka w procesach biznesowych</h2>
 	<body>Pewnie się zastanawiasz czym jest informatyka w procesach biznesowych?
 			swietnie ze trafiłes na te strone. </body>
-<head/>
+
+<style id="jsbin-css">
+body {
+  padding; 0;
+  margin: 0;
+  overflow: hidden;
+  background: #D7D7D7;
+}
+
+.site-nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px;
+  box-sizing: border-box;
+  height: 20px;
+  width: 100%;
+  background: #4a4d6d;
+}
+
+.side-menu-trigger {
+  border: 0;
+  border-radius: 5px;
+  background: #ffffff;
+  
+}
+
+.side-menu {
+  display: flex;
+  box-sizing: border-box;
+  position: absolute;
+  height: 100%;
+  width: 300px;
+  top: 20px;
+  right: -300px;
+  padding: 0;
+  background: #34b399;
+  transition: 0.3s transform ease-in-out;
+}
+
+.side-menu ul {
+  position: absolute;
+  display: flex;
+  height: calc(100% - 20px);
+  flex-wrap: wrap;
+  margin: 0 10px;
+  padding: 0;
+  list-style-type: none;
+  align-content: flex-start
+}
+
+.side-menu ul li {
+  display: flex;
+  height: 30px;
+  background: #ffffff;
+  flex-basis: 100%;
+  margin-top: 20px;
+  color: #696e9e;
+  border-radius: 5px;
+  overflow: hidden;
+  
+}
+
+.side-menu ul li a {
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  text-decoration: none;
+  box-sizing: border-box;
+}
+
+.side-menu-trigger:focus ~ .side-menu, .side-menu:hover {
+  transform: translateX(-300px); 
+}
+
+
 </html>
