--- a/index.html
+++ b/index.html
@@ -48,15 +48,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="styles.css">
-  <title>IWPB</title>
 	<h1>IWPB Witam na stronie</h1>
+  <title>IWPB - Informatyka w Procesach biznesowych</title>
+  <meta description name="IWPB" content="IWPB - informatyka w procesach biznesowych - kierunek kształcenia na politechnice poznańskiej.">
 	<body>Czesc
 			Bardzo się ciesze, ze połaczyłes się z moją strona. pokaze Ci w jaki sposob mozesz zarobic spore pieniadze
 			Pamietaj, duze pieniadze mozna zarobic w bardzo szybki sposob.</body>
 	<h2>informatyka w procesach biznesowych</h2>
 	<body>Pewnie się zastanawiasz czym jest informatyka w procesach biznesowych?
 			swietnie ze trafiłes na te strone. </body>
-
+    <h3>Jak skutecznie zacząć się przygotowywać do studiów na Politechnice Poznańskiej kierunek Informatka</h3>
+        <body>Informatyka jest kierunkiem bardzo rozwojowym na całym świecie. Kolosalne ilości kodu opracowywanego przez programistów ułatwiają życie wielu branżą.
+        Dzięki zaangażowaniu oraz ciężkiej pracy możesz przyczynić się do rozwoju firm. Aby zacząć studia na Politechnice Poznańśkiej musisz wykazać się dużą wiedzą
+        z fizyki oraz matematyki. Kierunki te znacznie pomogą Ci w studiowaniu. Pamiętaj liczy się zaangażownie oraz cel który sobie obrałeś, gdyż jest wiele dziedzin
+        w it w które możesz wkroczyć. Wykonuj zadania regularnie oraz przygotowuj się do zajęć</body>
 <style id="jsbin-css">
 body {
   padding; 0;
