--- a/index.html
+++ b/index.html
@@ -62,6 +62,69 @@
         Dzięki zaangażowaniu oraz ciężkiej pracy możesz przyczynić się do rozwoju firm. Aby zacząć studia na Politechnice Poznańśkiej musisz wykazać się dużą wiedzą
         z fizyki oraz matematyki. Kierunki te znacznie pomogą Ci w studiowaniu. Pamiętaj liczy się zaangażownie oraz cel który sobie obrałeś, gdyż jest wiele dziedzin
         w it w które możesz wkroczyć. Wykonuj zadania regularnie oraz przygotowuj się do zajęć</body>
+
+<form action="https://docs.google.com/forms/d/e/1FAIpQLSfADBa264UqnVavSl5N96NlE-ekjhfM37rBUPZN6brRKvvJOw/formResponse"
+      target="_self"
+      id="bootstrapForm"
+      method="POST">
+    <fieldset>
+        <h2>Formularz bez nazwy<br><small></small></h2>
+    </fieldset>
+
+
+    <!-- Field type: "choices" id: "879636660" -->
+    <fieldset>
+        <legend for="879636660">Czy studiujesz na PP</legend>
+        <div class="form-group">
+            <div class="radio">
+                <label>
+                    <input type="radio" name="entry.1204370005" value="Tak" >
+                    Tak
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="entry.1204370005" value="NIE" >
+                    NIE
+                </label>
+            </div>
+        </div>
+    </fieldset>
+
+
+    <!-- Field type: "choices" id: "350819172" -->
+    <fieldset>
+        <legend for="350819172">Czy urodziłeś się przed rokiem 1997&gt;</legend>
+        <div class="form-group">
+            <div class="radio">
+                <label>
+                    <input type="radio" name="entry.1502476472" value="TAK" required>
+                    TAK
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="entry.1502476472" value="NIE" required>
+                    NIE
+                </label>
+            </div>
+        </div>
+    </fieldset>
+
+    <input type="hidden" name="fvv" value="1">
+    <input type="hidden" name="fbzx" value="8788715744908440296">
+    <!--
+        CAVEAT: In multipages (multisection) forms, *pageHistory* field tells to google what sections we've currently completed.
+        This usually starts as "0" for the first page, then "0,1" in the second page... up to "0,1,2..N" in n-th page.
+        Keep this in mind if you plan to change this code to recreate any sort of multipage-feature in your exported form.
+        We're setting this to the total number of pages in this form because we're sending all fields from all the section together.
+    -->
+    <input type="hidden" name="pageHistory" value="0">
+
+    <input class="btn btn-primary" type="submit" value="Submit">
+</form>
+
+
 <style id="jsbin-css">
 body {
   padding; 0;
