--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 </style>
+
 </head>
+<!-- Global site tag (gtag.js) - Google Ads: 386530223 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-386530223"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-386530223');
+</script>
+
+<!-- Event snippet for Website traffic conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-386530223/6EOnCPu2h4kCEK_3p7gB'});
+</script>
+
 <body>
   <nav class="site-nav">
     <button class="side-menu-trigger">Menu</button>
