--- a/IWPB.html
+++ b/IWPB.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+</head>
+<!-- Global site tag (gtag.js) - Google Ads: 386530223 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-386530223"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-386530223');
+</script>
+
+<!-- Event snippet for Website traffic conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-386530223/6EOnCPu2h4kCEK_3p7gB'});
+</script>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>JS Bin</title>
