--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 </style>
 
 </head>
+
+<!-- Poczatek kodu trackingowego FreshMail -->
+<img src='https://mail.mailnews.pl/services/tracking/?id=yobfcjbq1s'/>
+<!-- Koniec kodu trackingowego FreshMail-->
+
 <!-- Global site tag (gtag.js) - Google Ads: 386530223 -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-386530223"></script>
 <script>
